--- a/BikeShop/BikeShop/BikeShop.csproj
+++ b/BikeShop/BikeShop/BikeShop.csproj
@@ -56,6 +56,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Notifier.cs" />
+    <Compile Include="ProductsFactory.cs" />
+    <Compile Include="ProductsManagement.xaml.cs">
+      <DependentUpon>ProductsManagement.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Talk.cs" />
     <Page Include="Contact.xaml">
       <SubType>Designer</SubType>
@@ -84,6 +89,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Menu.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ProductsManagement.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
