Added MVVM exercise

--- a/BikeShop/BikeShop/BikeShop.csproj
+++ b/BikeShop/BikeShop/BikeShop.csproj
@@ -61,6 +61,10 @@
     <Compile Include="ProductsManagement.xaml.cs">
       <DependentUpon>ProductsManagement.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ProductsManagementMVVM.xaml.cs">
+      <DependentUpon>ProductsManagementMVVM.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ProductsManagementMVVMViewModel.cs" />
     <Compile Include="Talk.cs" />
     <Page Include="Contact.xaml">
       <SubType>Designer</SubType>
@@ -93,6 +97,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="ProductsManagement.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ProductsManagementMVVM.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
